[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybalatro"
version = "0.1.0"
description = "A Python-based Balatro-inspired engine built as a learning project in OOP, data modeling, and game logic."
authors = [
    { name="Eric Claflin", email="eric.claflin@gmail.com" }
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
keywords = ["python", "cards", "game", "oop", "portfolio", "educational"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/eclaflin/pybalatro"
"Documentation" = "https://github.com/eclaflin/pybalatro/docs"
"Source" = "https://github.com/eclaflin/pybalatro"

